--- a/app/src/main/res/layout/activity_diary.xml
+++ b/app/src/main/res/layout/activity_diary.xml
@@ -12,10 +12,69 @@
         android:layout_height="match_parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/old_user_layout"
+            android:id="@+id/new_user_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/fill_timetable_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="90dp"
+                android:layout_marginEnd="90dp"
+                android:layout_marginBottom="3dp"
+                android:gravity="clip_horizontal|center|clip_vertical"
+                android:text="@string/fill_timetable"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/fill_timetable_descr_textView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintWidth_percent=".5"
+                app:layout_constraintHeight_percent=".5"/>
+
+            <TextView
+                android:id="@+id/fill_timetable_descr_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="14dp"
+                android:layout_marginEnd="22dp"
+                android:layout_marginBottom="16dp"
+                android:gravity="clip_horizontal|center|clip_vertical"
+                android:text="@string/timetable_descr_text"
+                app:layout_constraintBottom_toTopOf="@+id/new_lesson_button"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintWidth_percent=".5"
+                app:layout_constraintHeight_percent=".5"/>
+
+            <ImageView
+                android:id="@+id/new_lesson_button"
+                android:layout_width="193dp"
+                android:layout_height="58dp"
+                android:layout_marginStart="110dp"
+                android:layout_marginEnd="110dp"
+                android:layout_marginBottom="250dp"
+                android:contentDescription="@string/app_name"
+                android:src="@drawable/new_lesson"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintWidth_percent=".5"
+                app:layout_constraintHeight_percent=".5"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/old_user_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -27,7 +86,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:background="@android:color/transparent"
-                android:drawableRight="@drawable/add_lesson_image"
+                android:drawableEnd="@drawable/add_lesson_image"
                 android:text="@string/add_lesson_text"
                 android:textAlignment="textStart"
                 android:textAllCaps="false"
@@ -72,69 +131,9 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/new_user_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:visibility="invisible">
-
-            <TextView
-                android:id="@+id/fill_timetable_textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="161dp"
-                android:layout_marginLeft="161dp"
-                android:layout_marginEnd="162dp"
-                android:layout_marginRight="162dp"
-                android:layout_marginBottom="8dp"
-                android:gravity="clip_horizontal|center|clip_vertical"
-                android:text="@string/fill_timetable"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/fill_timetable_descr_textView"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-
-            <TextView
-                android:id="@+id/fill_timetable_descr_textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="22dp"
-                android:layout_marginLeft="22dp"
-                android:layout_marginEnd="22dp"
-                android:layout_marginRight="22dp"
-                android:layout_marginBottom="13dp"
-                android:gravity="clip_horizontal|center|clip_vertical"
-                android:text="@string/timetable_descr_text"
-                app:layout_constraintBottom_toTopOf="@+id/new_lesson_button"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-
-            <ImageView
-                android:id="@+id/new_lesson_button"
-                android:layout_width="193dp"
-                android:layout_height="58dp"
-                android:layout_marginStart="127dp"
-                android:layout_marginLeft="127dp"
-                android:layout_marginEnd="131dp"
-                android:layout_marginRight="131dp"
-                android:layout_marginBottom="322dp"
-                android:contentDescription="@string/app_name"
-                android:src="@drawable/new_lesson"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/create_lesson_layout"
-            android:layout_width="385dp"
-            android:layout_height="656dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:layout_marginTop="102dp"
             android:layout_marginEnd="12dp"
@@ -456,13 +455,15 @@
                 android:layout_width="357dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
                 android:backgroundTint="@color/colorOrange"
                 android:ems="10"
                 android:hint="@string/homework_text"
                 android:inputType="text"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ratingBarTwo" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
